--- a/static/global.css
+++ b/static/global.css
@@ -2,20 +2,28 @@
   --maxWidth: 1200px;
   --headerHeight: 56px;
 
-  --primary100: hsl(270, 70%, 90%);
-  --primary300: hsl(270, 70%, 80%);
-  --primary500: hsl(270, 70%, 70%);
+  --primary100: hsl(270, 90%, 90%);
+  --primary300: hsl(270, 85%, 80%);
+  --primary400: hsl(270, 80%, 75%);
+  --primary500: hsl(270, 75%, 70%);
   --primary600: hsl(270, 70%, 60%);
   --primary700: hsl(270, 80%, 50%);
 
+  --secondary300: hsl(160, 59%, 53%);
+
   --cardRadius: 15px;
+
+  --mainFont: 'Ubuntu', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+    Oxygen, Ubuntu, Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  --specialFont: 'Quicksand', -apple-system, BlinkMacSystemFont, 'Segoe UI',
+    Roboto, Oxygen, Ubuntu, Cantarell, 'Fira Sans', 'Droid Sans',
+    'Helvetica Neue', sans-serif;
 }
 
 body {
   margin: 0;
-  font-family: 'Ubuntu', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
-    Oxygen, Ubuntu, Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: var(--mainFont);
   font-size: 14px;
   line-height: 1.5;
   color: #333;
@@ -48,15 +56,6 @@ ul {
 
 li {
   margin: 0;
-}
-
-code {
-  font-family: menlo, inconsolata, monospace;
-  font-size: calc(1em - 2px);
-  color: #555;
-  background-color: #f0f0f0;
-  padding: 0.2em 0.4em;
-  border-radius: 2px;
 }
 
 @media only screen and (min-width: 480px) {
