--- a/static/global.css
+++ b/static/global.css
@@ -1,6 +1,9 @@
 :root {
   --maxWidth: 1480px;
   --headerHeight: 56px;
+  --maxWidthBlog: 780px;
+
+  --grey500: hsl(160, 5%, 50%);
 
   --primary100: hsl(270, 90%, 90%);
   --primary300: hsl(270, 85%, 80%);
@@ -10,6 +13,7 @@
   --primary700: hsl(270, 80%, 50%);
 
   --secondary300: hsl(160, 59%, 53%);
+  --secondary600: hsl(160, 70%, 34%);
 
   --cardRadius: 15px;
 
@@ -19,6 +23,16 @@
   --specialFont: 'Quicksand', -apple-system, BlinkMacSystemFont, 'Segoe UI',
     Roboto, Oxygen, Ubuntu, Cantarell, 'Fira Sans', 'Droid Sans',
     'Helvetica Neue', sans-serif;
+}
+
+html {
+  box-sizing: border-box;
+}
+
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
 }
 
 body {
