blog post styling

--- a/static/global.css
+++ b/static/global.css
@@ -1,10 +1,11 @@
 :root {
   --maxWidth: 1480px;
   --headerHeight: 56px;
-  --maxWidthBlog: 780px;
+  --maxWidthBlog: 720px;
 
   --defSidePadding: 30px;
 
+  --grey300: hsl(160, 5%, 70%);
   --grey500: hsl(160, 5%, 50%);
 
   --primary100: hsl(270, 90%, 90%);
@@ -13,6 +14,7 @@
   --primary500: hsl(270, 75%, 70%);
   --primary600: hsl(270, 70%, 60%);
   --primary700: hsl(270, 80%, 50%);
+  --primary800: hsl(270, 89%, 30%);
 
   --secondary300: hsl(160, 59%, 53%);
   --secondary600: hsl(160, 70%, 34%);
@@ -35,6 +37,15 @@ html {
 *:before,
 *:after {
   box-sizing: inherit;
+}
+
+::-moz-selection {
+  /* Code for Firefox */
+  background: var(--secondary300);
+}
+
+::selection {
+  background: var(--secondary300);
 }
 
 body {
@@ -63,7 +74,7 @@ h6 {
 }
 
 h1 {
-  font-size: 2em;
+  font-size: 40px;
 }
 
 a {
@@ -78,4 +89,41 @@ ul {
 
 li {
   margin: 0;
+}
+
+blockquote {
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-style: italic;
+  border-left: 3px solid var(--secondary300);
+  margin-left: 30px;
+  padding-left: 10px;
+}
+
+article ul {
+  padding: 0 30px;
+  margin: 0;
+  list-style: unset;
+}
+
+article li {
+  margin: 0 0 7px;
+}
+
+article .emphasis {
+  font-size: 21px;
+  text-shadow: 0 0 7px hsla(160, 59%, 53%, 0.4);
+}
+
+article .box {
+  border-left: 3px solid var(--primary500);
+  padding: 10px 14px 12px 18px;
+  margin: 0 12px;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+  border-bottom-right-radius: 10px;
+  border-top-right-radius: 10px;
+}
+
+article .box p {
+  margin: 0;
+  color: var(--primary800);
 }
