--- a/static/global.css
+++ b/static/global.css
@@ -7,6 +7,7 @@
 
   --grey300: hsl(160, 5%, 70%);
   --grey500: hsl(160, 5%, 50%);
+  --grey900: hsl(160, 15%, 9%);
 
   --primary100: hsl(270, 90%, 90%);
   --primary300: hsl(270, 85%, 80%);
@@ -17,7 +18,9 @@
   --primary800: hsl(270, 89%, 30%);
 
   --secondary300: hsl(160, 59%, 53%);
+  --secondary500: hsl(160, 65%, 44%);
   --secondary600: hsl(160, 70%, 34%);
+  --secondary700: hsl(160, 65%, 25%);
 
   --cardRadius: 15px;
 
@@ -54,6 +57,7 @@ body {
   font-size: 14px;
   line-height: 1.5;
   color: #333;
+  color: var(--grey900);
 }
 
 @media only screen and (min-width: 480px) {
@@ -99,22 +103,65 @@ blockquote {
   padding-left: 10px;
 }
 
-article ul {
+hr {
+  width: 50%;
+  margin: 30px auto;
+  border: none;
+  border-bottom: 1px solid var(--secondary600);
+}
+
+.blog-post h2,
+.blog-post h3,
+.blog-post h4 {
+  font-family: var(--specialFont);
+  font-weight: 700;
+  color: var(--secondary700);
+}
+
+.blog-post h2 {
+  margin: 45px 0 20px;
+  font-size: 34px;
+}
+
+.blog-post h3 {
+  margin: 35px 0 20px;
+  font-size: 28px;
+}
+
+.blog-post h4 {
+  margin: 25px 0 15px;
+  font-size: 25px;
+}
+
+.blog-post p {
+  margin: 0 0 26px;
+}
+
+.blog-post a {
+  color: var(--primary700);
+  transition: all 0.3s;
+}
+
+.blog-post a:hover {
+  color: var(--grey900);
+}
+
+.blog-post ul {
   padding: 0 30px;
   margin: 0;
   list-style: unset;
 }
 
-article li {
+.blog-post li {
   margin: 0 0 7px;
 }
 
-article .emphasis {
+.blog-post .emphasis {
   font-size: 21px;
   text-shadow: 0 0 7px hsla(160, 59%, 53%, 0.4);
 }
 
-article .box {
+.blog-post .box {
   border-left: 3px solid var(--primary500);
   padding: 10px 14px 12px 18px;
   margin: 0 12px;
@@ -123,7 +170,7 @@ article .box {
   border-top-right-radius: 10px;
 }
 
-article .box p {
+.blog-post .box p {
   margin: 0;
   color: var(--primary800);
 }
