--- a/static/global.css
+++ b/static/global.css
@@ -148,7 +148,7 @@ hr {
 
 .blog-post ul {
   padding: 0 30px;
-  margin: 0;
+  margin: 0 0 26px;
   list-style: unset;
 }
 
@@ -164,7 +164,7 @@ hr {
 .blog-post .box {
   border-left: 3px solid var(--primary500);
   padding: 10px 14px 12px 18px;
-  margin: 0 12px;
+  margin: 0 12px 26px;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
   border-bottom-right-radius: 10px;
   border-top-right-radius: 10px;
