--- a/static/global.css
+++ b/static/global.css
@@ -1,5 +1,5 @@
 :root {
-  --maxWidth: 1480px;
+  --maxWidth: 1280px;
   --headerHeight: 56px;
   --maxWidthBlog: 720px;
 
@@ -26,7 +26,10 @@
   --secondary600: hsl(160, 70%, 34%);
   --secondary700: hsl(160, 65%, 25%);
 
+  --winner500: #ffcf00;
+
   --cardRadius: 15px;
+  --buttonRadius: 5px;
 
   --mainFont: 'Ubuntu', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
     Oxygen, Ubuntu, Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -112,6 +115,10 @@ hr {
   margin: 30px auto;
   border: none;
   border-bottom: 1px solid var(--secondary600);
+}
+
+img {
+  max-width: 100%;
 }
 
 .blog-post h2,
