--- a/static/global.css
+++ b/static/global.css
@@ -1,11 +1,13 @@
 :root {
-  --maxWidth: 1280px;
+  --maxWidth: 1440px;
+  --widerWidth: 1280px;
   --headerHeight: 56px;
   --maxWidthBlog: 720px;
 
   --defSidePadding: 30px;
 
   --grey100: hsl(160, 15%, 99%);
+  --grey200: hsl(160, 10%, 85%);
   --grey300: hsl(160, 5%, 70%);
   --grey500: hsl(160, 5%, 50%);
   --grey700: hsl(160, 5%, 30%);
@@ -30,6 +32,8 @@
 
   --cardRadius: 15px;
   --buttonRadius: 5px;
+
+  --boxShadow: 0 2px 3px rgba(0, 0, 0, 0.15);
 
   --mainFont: 'Ubuntu', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
     Oxygen, Ubuntu, Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
